# lianwall

./: Cargo.toml  README.md
src/: command.rs  config.rs  main.rs  manager.rs  vram.rs
src/algorithm/: mod.rs  selector.rs  weight.rs
src/paperengine/: mod.rs  mpvpaper.rs  swww.rs
src/transcode/: cache.rs  config.rs  detector.rs  encoder.rs  mod.rs  preloader.rs
