[package]
name = "lianwall"
version = "2.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8"
walkdir = "2"
dirs = "6.0.0"
clap = { version = "4.4", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
